Fixed copyright spacing

--- a/docs/style.css
+++ b/docs/style.css
@@ -211,6 +211,7 @@ h3 {
 .controls {
   text-align: center;
   margin-top: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 button {
